[gd_scene load_steps=5 format=3 uid="uid://cr1qr7gpa0hu4"]

[ext_resource type="Script" uid="uid://bbps2wycy5buf" path="res://game/minijuegos/clasificacion/clasificacion.gd" id="1_hl5oh"]
[ext_resource type="PackedScene" uid="uid://b85icybulxr4f" path="res://game/minijuegos/clasificacion/ObjetoDental.tscn" id="2_v6t6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6t6k"]
size = Vector2(311.845, 720.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w53b"]
size = Vector2(350.1881, 719.3402)

[node name="Clasificacion" type="Node2D"]
position = Vector2(33, 61)
scale = Vector2(1.147, 1.147)
script = ExtResource("1_hl5oh")
objeto_scene = ExtResource("2_v6t6k")

[node name="Fondo" type="TextureRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.147, 1.147)
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="ZonaIzquierda" type="Area2D" parent="." groups=["zona_buena"]]
scale = Vector2(1.147, 1.147)

[node name="ColorVisual" type="ColorRect" parent="ZonaIzquierda"]
offset_left = -23.563234
offset_top = -47.886574
offset_right = 289.43677
offset_bottom = 668.1134
scale = Vector2(1.147, 1.147)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaIzquierda" groups=["zona_buena"]]
position = Vector2(156, 360)
scale = Vector2(1.147, 1.147)
shape = SubResource("RectangleShape2D_v6t6k")

[node name="ZonaDerecha" type="Area2D" parent="." groups=["zona_mala"]]
scale = Vector2(1.147, 1.147)

[node name="ColorRect" type="ColorRect" parent="ZonaDerecha"]
offset_left = 1026.1409
offset_top = -47.886574
offset_right = 1378.1409
offset_bottom = 671.1134
scale = Vector2(1.147, 1.147)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaDerecha" groups=["zona_mala"]]
position = Vector2(1228.9235, 364.655)
scale = Vector2(1.147, 1.147)
shape = SubResource("RectangleShape2D_5w53b")

[node name="ContenedorObjetos" type="Node2D" parent="."]
scale = Vector2(1.147, 1.147)

[node name="PuntoAparicion" type="Marker2D" parent="ContenedorObjetos"]
position = Vector2(670.412, 386.133)
scale = Vector2(1.147, 1.147)

[node name="AudioNarrador" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(1.147, 1.147)

[node name="AudioFx" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(1.147, 1.147)

[node name="LabelPuntos" type="Label" parent="."]
offset_left = 394.0
offset_top = 13.0
offset_right = 732.0
offset_bottom = 36.0
scale = Vector2(1.147, 1.147)
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true
